--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
         <body>
             <h1>Salmon Cookies</h1> 
         <div id="parent">
-            <section>
+            <!-- <section>
                 <article>
                     <h2></h2>
                      <p></p>
                         <ul>
-                            <li></li>
-                           
+                            <li></li> 
                         </ul>
-
             </article>
-        </section>
+        </section> -->
     </div>
     </main>  
 
