corrected js and now it runs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <body>
             <h1>Salmon Cookies</h1> 
-        <div id="parent">
+        <div id="root">
             <!-- <section>
                 <article>
                     <h2></h2>
