added a contact us page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <div class="h1">
             <h1>Salmon Cookies</h1>
+            <img src="images/salmon.png" alt="a picture of a salmon" class="salmon"> 
         </div>
         
         <div class="nav-list">
