--- a/sales.html
+++ b/sales.html
@@ -10,11 +10,13 @@
 </head>
     <main>
         <body>
-            <div class="h1"><h1>Salmon Cookies Sales</h1></div> 
+            <div class="h1"><h1>Salmon Cookies Sales</h1>
+                <img src="images/salmon.png" alt="a picture of a salmon" class="salmon"> 
+            </div> 
             <div class="nav-list">
                 <nav>
                         <ul>
-                            <a href="sales.html">Home</a>
+                            <a href="index.html">Home</a>
                             <a href="sales.html">Sales</a>
                             <a href="contact.html">Contact Us</a>
                         </ul>
@@ -29,7 +31,7 @@
     <footer id="footer">
         <p>&copy; JSTimm 2024</p>
     </footer>  
-    
+
     <script src="app.js"></script>
 </body>
 </html>
