added some css and forms

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/more-style.css" rel="stylesheet">
     <title>Salmon Cookie</title>
@@ -18,9 +19,11 @@
         <div class="nav-list">
         <nav>
                 <ul>
-                    <a href="sales.html">Home</a>
-                    <a href="sales.html">Sales</a>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="index.html"><strong>Home</strong></a>
+                        
+                            <a href="sales.html"><strong>Sales</strong></a>
+
+                            <a href="contact.html"><strong>Contact Us</strong></a>
                 </ul>
         </nav>
         </div>
