--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
                 <img src="images/salmon.png" alt="a picture of a salmon" class="salmon"> 
             </div> 
             <div class="nav-list">
+                <!-- Nav -->
                 <nav>
                         <ul>
+                            <!-- links in nav -->
                             <a href="index.html"><strong>Home</strong></a>
-                        
                             <a href="sales.html"><strong>Sales</strong></a>
-
                             <a href="contact.html"><strong>Contact Us</strong></a>
                         </ul>
                 </nav>
@@ -27,7 +27,7 @@
             <div id="contact" class="content-block">
                 <h2>Hit Us Up!</h2>
                 <p>Have a question, seend a a message and we will get right back with you.</p>
-    
+                <!-- form layout -->
                 <form id="form2">
                     <label for="your_name"> YourName</label>
                     <input type="text" id="your_name" placeholder="John B. Good">
